--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>2🐦小兰</title>
+    <title>To My Beloved</title>
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
